# build-an-agent

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  demo_deck.pptx  demo_sanitizer.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devx/: README.md  _sidebar.md  introduction_to_agents.md  learn_the_code.md  next_steps.md  report_generation_agent.md  secrets.md  share_your_agent.md
.devx/_static/css/: brand.css
.github/workflows/: ci.yml  devx-build.yaml
.project/: brev.Containerfile  configpacks
.project/cache/: entrypoint.sh
code/: Introduction_to_Environmental_Science_notes.md  Introduction_to_REDACTED_notes.md  ecosystem_lesson.pptx  test_curriculum_agent.py
code/curriculum_agent/: __init__.py  curriculum_agent.py  models.py
code/educator_agent/: __init__.py  __main__.py  cli.py  copilot_pptx.py  curriculum_planner.py  oer_resource_finder.py  packager.py  sanitizer.py  slide_generator.py  speaker_notes.py  test_presentation.pptx
code/tests/: test_oer.py
docs/: api.md  index.md  usage.md
docs/examples/: curriculum.md  powerpoint.md  sanitizer.md
scripts/: demo_end_to_end.sh
tests/: __init__.py  test_oer_resource_finder.py  test_planner.py  test_sanitizer.py  test_slide_generator.py  test_speaker_notes.py
