[project]
name = "build-an-agent"
description = "build-an-agent"
version = "0.0.1"
dependencies = [
    "jupyterlab\u003e=4.0.0",
    "jupyterlab-git\u003e=0.44.0",
    "jupyter-app-launcher\u003e=0.1.0",
]

[tool.brev]
instance_type = "l40s-48gb.1x"
cloud = "crusoe"
ports = [ { name = "jupyter", port = 8888 } ]
